Fixing New Movie button location for better view on smaller screens

--- a/app/assets/stylesheets/components/_components.scss
+++ b/app/assets/stylesheets/components/_components.scss
@@ -76,9 +76,3 @@
     padding: 18px 25px 0 18px;
   }
 }
-.movie-create {
-  // TODO fix responsiveness
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-}
